examples/test/testpolicy11819.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11819
  namespace: namespace489
spec:
  podSelector:
    matchLabels:
      key9: value31
      key34: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value1
          key43: value1
          key24: value40
      podSelector:
        matchLabels:
          key6: value17
          key17: value32
